:bug: fix: scrollbar mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,21 @@
   }
 }
 
+@media only screen and (max-width: 600px) {
+  ::-webkit-scrollbar {
+    width: 0.2rem;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #343e3d;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #607466;
+    border-radius: 999px;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 0.45rem;
 }
